--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-gradient-progress": "^1.0.2",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
     "react-loadingg": "^1.7.2",
