--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-loadingg": "^1.7.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
